tests/negative/gold/string_too_large_test.gold
tests/negative/string_too_large_test.toit:3:11: error: Literal string too large
LARGE ::= """
          ^
Compilation failed.
